Rapatriement des images

--- a/articles/bibliothèque-nationale-de-fabrication.mdx
+++ b/articles/bibliothèque-nationale-de-fabrication.mdx
@@ -2,7 +2,8 @@
 titre: La bibliothèque nationale de fabrication
 date: 2020-09-29
 image:
-  adresse: https://i.imgur.com/yGG56Qr.jpg
+  adresse: bnf-richelieu.jpg
+  source: https://i.imgur.com/yGG56Qr.jpg
   description: La grande et magnifique bibliothèque nationale de France, salle Labrouste
 résumé: L'État doit lancer un grand service public de fabrication des objets standards que l'on aura jugé démocratiquement essentiels à notre société.
 ---
