--- a/articles/l-homme-a-coque.mdx
+++ b/articles/l-homme-a-coque.mdx
@@ -5,7 +5,8 @@ résumé: |
   La voiture est la carapace de l’automobiliste, cet homme à coque d'acier. 
   Il fait corps avec elle.
 image:
-  adresse: https://images.unsplash.com/photo-1518560998531-087edcb36c13?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=687&q=80
+  adresse: voiture.jpg
+  source: https://images.unsplash.com/photo-1518560998531-087edcb36c13?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=687&q=80
   description: Volkswagen avait bien compris l'idée
 ---
 
