--- a/articles/l-état-nous-doit-des-explications.mdx
+++ b/articles/l-état-nous-doit-des-explications.mdx
@@ -3,7 +3,7 @@ titre: L’État nous doit des explications
 résumé: A mesure que les algorithmes prennent une place centrale dans l'action publique, l’État nous doit l'explication de ces boîtes noires. Exemple sur le cas de l'impôt sur le revenu.
 date: 2018-06-21
 image:
-  adresse: https://cdn-images-1.medium.com/max/2560/1*RbIsqc5VcBlXSWNrGNkN0Q.png
+  adresse: assemblée-binaire.png
   description: Une photo de l'assemblée nationale avec des 0 et des 1 superposés pour représenter le code de la République.
 ---
 
