--- a/articles/le-tgv-airfrance-est-attendu-au-depart.mdx
+++ b/articles/le-tgv-airfrance-est-attendu-au-depart.mdx
@@ -4,7 +4,7 @@ résumé: |
   La compagnie aérienne fera-t-elle le choix visionnaire de devenir un acteur du seul transport rapide du futur : le train ?
 date: 2019-10-20
 image:
-  adresse: https://cdn-images-1.medium.com/max/800/1*lgbRWT3Chvu4V_ybv307Yw.jpeg
+  adresse: train-avion.jpg
   description: Au soleil couchant, un train au premier plan et un avion dans le ciel au second plan.
 ---
 
