--- a/articles/lettre-de-notre-futur-post-pétrole.mdx
+++ b/articles/lettre-de-notre-futur-post-pétrole.mdx
@@ -2,7 +2,8 @@
 titre: Lettre de notre futur post-pétrole
 résumé: Beaucoup n'y croyaient plus, à ce fameux pic pétrolier, on était plus fort que lui. Si vous avez déjà pris une énorme cuite, alors vous savez comment ça s'est fini.
 image:
-  adresse: https://images.unsplash.com/photo-1523975041633-a62b4a500f7e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=975&q=80
+  adresse: pétrole.jpg
+  source: https://images.unsplash.com/photo-1523975041633-a62b4a500f7e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=975&q=80
   description: En contreplongée, une personne voit sous ses pieds le reflet multicolore du pétrole répandu au sol
 date: 2020-08-08
 dégradé:
@@ -35,7 +36,7 @@ Tout ça pourrait n'être qu'un nouveau style de vie auquel on trouverait un cer
 
 Les réserves de charbon d'Europe de l'Est sont inutiles : l'accord de Moscou, faisant suite à l'accord de Paris, a tranché. C'est déjà assez la merde comme ça sans pétrole pour qu'on s'inflige +3° de réchauffement. À vrai dire, c'est la grande victoire de cette crise : les humains se sont tous rendu compte de leur vulnérabilité. Loin des imaginaires d'effondrement annonçant une guerre totale, on a réussi à se serrer les coudes, un peu, au moins sur la question du réchauffement climatique. Faut dire qu'avec cette pénurie de pétrole, on avait le vent dans le dos.
 
-Il ne faudrait pas s'imaginer pour autant qu'on vit dans un monde de bisounours, loin de là, et les quelques États pétroliers restants sont devenus des nations redoutables. Faute de réserves suffisantes pour contenter tout le monde, les prix ont d'abord explosé, jusqu'à ce que les premiers pays "riches" actent, non sans difficultés, leur stratégie radicalement anti-pétrole. Les pétroliers ont en conséquence dû baisser leur train de vie mais restent très influents surtout sur le plan militaire. 
+Il ne faudrait pas s'imaginer pour autant qu'on vit dans un monde de bisounours, loin de là, et les quelques États pétroliers restants sont devenus des nations redoutables. Faute de réserves suffisantes pour contenter tout le monde, les prix ont d'abord explosé, jusqu'à ce que les premiers pays "riches" actent, non sans difficultés, leur stratégie radicalement anti-pétrole. Les pétroliers ont en conséquence dû baisser leur train de vie mais restent très influents surtout sur le plan militaire.
 
 Non, contrairement à ce que la classe politique française pensait en 2020, l'hydrogène n'était évidemment pas la solution pour l'aviation, alors il a fallu se serrer la ceinture pour que notre armée puisse continuer d'exister. Les conflits locaux sont nombreux, mais plus qu'avant, ils passent au-dessus de notre quotidien et on les oublie, tous à regarder notre nombril, maintenant qu'on s'en fout un peu plus de la stabilité de ces pays qu'on ne visite plus en vacances.
 
@@ -65,7 +66,7 @@ Heureusement pour les jeunes, le poste logement de notre budget a lui dégringol
 
 Les villes actives et centrales restent chères, mais il n'est plus question de payer un studio hors de prix et mal isolé pour y rôtir lors de la demi-douzaine de canicules annuelles. La Normandie, le Nord et la Bretagne are the new Côte d'Azur, les blagues sur le climat breton sont ringardes. Heureusement, toute cette nouvelle côte tendance n'a pas suivi les délires d'urbanisation du nouvel État indépendant du Cotentin.
 
-Au-delà de la capitale, tout le pays était bien préparé à la crise, encore une fois grâce aux rails, connectant la plupart des villes. On a de suite débitumé et  réhabilité les lignes abandonnées pour connecter un tas de petites villes, mais sans les électrifier : vous pensez bien qu'entre équiper un TLR (Train Léger Régional) ou 3 Teslas avec le peu de lithium qu'on a commencé à extraire localement, la question elle est vite répondue. L'État a vite encadré la vente de batteries.
+Au-delà de la capitale, tout le pays était bien préparé à la crise, encore une fois grâce aux rails, connectant la plupart des villes. On a de suite débitumé et réhabilité les lignes abandonnées pour connecter un tas de petites villes, mais sans les électrifier : vous pensez bien qu'entre équiper un TLR (Train Léger Régional) ou 3 Teslas avec le peu de lithium qu'on a commencé à extraire localement, la question elle est vite répondue. L'État a vite encadré la vente de batteries.
 
 Si l'on a pu relier à nouveau les villages anciennement ferrés, il était évidemment hors de question de construire des rails pour les ilôts résidentiels peu denses. Beaucoup sont abandonnés aujourd'hui, d'autres prospèrent grâce à l'engagement de leurs habitants, dans un choix de vie hyper-locale qui leur convient.
 
