--- a/articles/renaissance-des-villes.mdx
+++ b/articles/renaissance-des-villes.mdx
@@ -2,7 +2,7 @@
 titre: Renaissance des villes
 résumé: En plein covid, on parlait de ce trop timide monde d'après. Il lui a fallu un petit coup de pouce.
 image:
-  adresse: https://i.imgur.com/e9qlrK7.jpg
+  adresse: renaissance-villes.jpg
   description: La France, vue depuis un satellite, semble avoir comme un champignon vert qui s'étend depuis ses métropoles
 date: 2021-03-13
 dégradé:
