--- a/articles/vers-implémentation-officielle-de-la-loi.mdx
+++ b/articles/vers-implémentation-officielle-de-la-loi.mdx
@@ -3,7 +3,7 @@ titre: Vers une implémentation officielle de la loi
 description: 'Partie 1 : introduction'
 résumé: L'Etat doit accompagner la loi d'un code qui peut être lu par un ordinateur
 image:
-  adresse: 'https://cdn-images-1.medium.com/max/2560/1*xOKbBlYZ4wg0OhIhyUgnfQ.jpeg'
+  adresse: assemblée.jpg
   description: Une photo de l'assemblée nationale française.
 date: 2017-06-22
 ---
