--- a/articles/ville-idéale-ou-crise.mdx
+++ b/articles/ville-idéale-ou-crise.mdx
@@ -2,7 +2,7 @@
 titre: 'La crise, ou la ville idéale ?'
 résumé: Le rapport qualité-prix de nos villes est en chute libre. Il y a pourtant une solution évidente pour qu'elles restent désirables.
 image:
-  adresse: https://i.imgur.com/OZEwzs5.jpg
+  adresse: ville-crise.jpg
   description: Une paisible rue presque piétonne pavée dans le 20ème arrondissement de Paris
 date: 2020-04-26
 ---
