--- a/articles/éloge-décroissance-individuelle.mdx
+++ b/articles/éloge-décroissance-individuelle.mdx
@@ -2,10 +2,10 @@
 titre: 'Éloge de la décroissance individuelle'
 résumé: Oubliez tout ce qu'on vous a dit sur les efforts individuels versus le collectif.
 image:
-  adresse: https://i.imgur.com/tGFRD22.png
+  adresse: eloge.jpg
   description: |
     Des gens sautent dans la mer depuis un rocher.
-    Source : Steven Donovan @es_dons sur Instagram
+  source: Steven Donovan @es_dons sur Instagram
 date: 2021-04-02
 ---
 
@@ -164,5 +164,4 @@ Je crois qu'il ne suffit que de 3 choses pour que cette base se dérobe :
 2. comprendre l'ampleur de l'effort à fournir, l'inutilité des petits gestes, quels sont les grands gestes.
 3. ne pas laisser dire que la pression sociale, la contagion des modes de vie n'existe pas 😉
 
-
-> Note : un autre article plus court, de Tristan Nitot, traite du même sujet d'un autre point de vue et était déjà sorti 1 an et demi avant, [à lire]( https://standblog.org/blog/post/2019/02/18/Agir-pour-le-climat-à-titre-individuel).
+> Note : un autre article plus court, de Tristan Nitot, traite du même sujet d'un autre point de vue et était déjà sorti 1 an et demi avant, [à lire](https://standblog.org/blog/post/2019/02/18/Agir-pour-le-climat-à-titre-individuel).
