Couleurs et pas de Yarn

--- a/articles/renaissance-des-villes.mdx
+++ b/articles/renaissance-des-villes.mdx
@@ -5,6 +5,7 @@ image:
   adresse: renaissance-villes.jpg
   description: La France, vue depuis un satellite, semble avoir comme un champignon vert qui s'étend depuis ses métropoles
 date: 2021-03-13
+couleur du texte: white
 dégradé:
   - '#000'
   - '#16402c'
