--- a/articles/le-cout-des-choses.mdx
+++ b/articles/le-cout-des-choses.mdx
@@ -7,6 +7,7 @@ image:
   adresse: pièce cassée transparente.png
   description: Une pièce de monnaie brisée. Les inscriptions "In god we trust" et "Liberty", brisées elles aussi.
 date: 2022-06-01
+couleur du texte: white
 dégradé:
   - '#000'
   - '#260808'
