Le fond dégradé couvre à nouveau toute la page

--- a/articles/lettre-de-notre-futur-post-pétrole.mdx
+++ b/articles/lettre-de-notre-futur-post-pétrole.mdx
@@ -6,8 +6,9 @@ image:
   source: https://images.unsplash.com/photo-1523975041633-a62b4a500f7e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=975&q=80
   description: En contreplongée, une personne voit sous ses pieds le reflet multicolore du pétrole répandu au sol
 date: 2020-08-08
+couleur du texte: white
 dégradé:
-  - '#000'
+  - '#000000'
   - '#9198e5'
 ---
 
